--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/piotrekwitkowski/event-finder-cloudscape.git"
+  },
   "dependencies": {
     "@cloudscape-design/collection-hooks": "^1.0.19",
     "@cloudscape-design/components": "^3.0.164",
